force-app/main/default/objects/ContentLinkDefault__mdt/ContentLinkDefault__mdt.object-meta.xml
<CustomObject>
    <description>Overwrite Content Link default values based on object specific rules.</description>
    <label>Content Link Default</label>
    <pluralLabel>Content Link Defaults</pluralLabel>
</CustomObject>