force-app/main/default/objects/ContentLinkDefault__mdt/fields/CurrentShareType__c.field-meta.xml
<CustomField>
    <fullName>CurrentShareType__c</fullName>
    <description>Select the current share type the Content Link record must have to apply this rule.</description>
    <inlineHelpText>Select the current share type the Content Link record must have to apply this rule.</inlineHelpText>
    <label>Current Share Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V</fullName>
                <label>View</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Set by Record</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Collaborator</label>
            </value>
            <value>
                <fullName>*</fullName>
                <default>true</default>
                <label>Any</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>