force-app/main/default/objects/ContentLinkDefault__mdt/fields/CurrentVisibility__c.field-meta.xml
<CustomField>
    <fullName>CurrentVisibility__c</fullName>
    <description>Select the current visibility the Content Link record must have to apply this rule.</description>
    <inlineHelpText>Select the current visibility the Content Link record must have to apply this rule.</inlineHelpText>
    <label>Current Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AllUsers</fullName>
                <default>true</default>
                <label>All Users</label>
            </value>
            <value>
                <fullName>InternalUsers</fullName>
                <label>Standard Users</label>
            </value>
            <value>
                <fullName>SharedUsers</fullName>
                <label>Shared Users</label>
            </value>
            <value>
                <fullName>*</fullName>
                <label>Any</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>