force-app/main/default/objects/ContentLinkDefault__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, this rule will be processed when new Content Link Records are created</description>
    <inlineHelpText>When checked, this rule will be processed when new Content Link Records are created</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>