force-app/main/default/objects/ContentLinkDefault__mdt/fields/OrderIndex__c.field-meta.xml
<CustomField>
    <fullName>OrderIndex__c</fullName>
    <description>Order in which this rule will be processed. Lower numbers are processed before higher numbers.</description>
    <inlineHelpText>Order in which this rule will be processed. Lower numbers are processed before higher numbers.</inlineHelpText>
    <label>Rule Order Index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>