force-app/main/default/objects/ContentLinkDefault__mdt/fields/ShareType__c.field-meta.xml
<CustomField>
    <fullName>ShareType__c</fullName>
    <description>Select the share type that will be assigned to the Content Link record. Select &#39;Do NOT Change&#39; if the value should not be assigned.</description>
    <inlineHelpText>Select the share type that will be assigned to the Content Link record. Select &#39;Do NOT Change&#39; if the value should not be assigned.</inlineHelpText>
    <label>Share Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V</fullName>
                <default>true</default>
                <label>View</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Set by Record</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Collaborator</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <label>Do NOT change</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>