force-app/main/default/objects/ContentLinkDefault__mdt/fields/sObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>sObject_API_Name__c</fullName>
    <description>API Name of SObject that this rule applies to. If this rule should apply to all sobjects, enter *</description>
    <inlineHelpText>API Name of SObject that this rule applies to. If this rule should apply to all sobjects, enter *</inlineHelpText>
    <label>sObject API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>