force-app/main/default/objects/ContentLinkDefault__mdt/fields/TestData__c.field-meta.xml
<CustomField>
    <fullName>TestData__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify test metadata record. Do not check for actual usage.</description>
    <inlineHelpText>Used to identify test metadata record. Do not check for actual usage.</inlineHelpText>
    <label>Test Data</label>
    <type>Checkbox</type>
</CustomField>