force-app/main/default/objects/ContentLinkDefault__mdt/fields/TriggerContext__c.field-meta.xml
<CustomField>
    <fullName>TriggerContext__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only execute this rule when a trigger called the default assignment method.</description>
    <inlineHelpText>Only execute this rule when a trigger called the default assignment method.</inlineHelpText>
    <label>Trigger Context Only</label>
    <type>Checkbox</type>
</CustomField>