force-app/main/default/objects/ContentLinkDefault__mdt/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <description>Apply this rule only when the current user type matches this value.</description>
    <inlineHelpText>Apply this rule only when the current user type matches this value.</inlineHelpText>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>*</fullName>
                <label>Any</label>
            </value>
            <value>
                <fullName>Internal</fullName>
                <default>true</default>
                <label>Internal</label>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>HV</fullName>
                <label>High-Volume</label>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>