force-app/main/default/objects/ContentLinkDefault__mdt/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <description>Select the visibility that will be assigned to the Content Link record. Select &#39;Do NOT Change&#39; if the value should not be assigned.</description>
    <inlineHelpText>Select the visibility that will be assigned to the Content Link record. Select &#39;Do NOT Change&#39; if the value should not be assigned.</inlineHelpText>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AllUsers</fullName>
                <default>true</default>
                <label>All Users</label>
            </value>
            <value>
                <fullName>InternalUsers</fullName>
                <label>Standard Users</label>
            </value>
            <value>
                <fullName>SharedUsers</fullName>
                <label>Shared Users</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <label>Do NOT Change</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>